syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.lib";

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByIdRequest {
  int64 id = 1;
}

message CreateUserRequest {
  string email = 1;
  string fullName = 2;
  string password = 3;
  string confirmPassword = 4;
}

message UpdateUserRequest {
  int64 id = 1;
  string fullName = 2;
}

message DeleteUserRequest {
  int64 id = 1;
}

message UserResponse {
  int64 id = 1;
  string email = 2;
  string fullName = 3;
  string password = 4;
}

service UserService {
  rpc findById(GetUserByIdRequest) returns (UserResponse);
  rpc findByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc create(CreateUserRequest) returns (UserResponse);
  rpc update(UpdateUserRequest) returns (UserResponse);
  rpc deleteById(DeleteUserRequest) returns (UserResponse);
}

